[gd_scene load_steps=14 format=3 uid="uid://c027b4usebimx"]

[ext_resource type="Script" path="res://scripts/uis/player/WinMenu.gd" id="1_vuus5"]
[ext_resource type="PackedScene" uid="uid://c5ls5sjfr4mir" path="res://scenes/bundles/uis/time_label.tscn" id="2_bie6w"]
[ext_resource type="Theme" uid="uid://becgxgj56yfdh" path="res://assets/style/default_theme.tres" id="2_gnpol"]
[ext_resource type="LabelSettings" uid="uid://bf4264al524mo" path="res://assets/style/label_settings/shadow_big_label.tres" id="3_ugqvv"]
[ext_resource type="LabelSettings" uid="uid://dfu1k8upq5eqm" path="res://assets/style/label_settings/shadow_medium_label.tres" id="5_cu4gx"]
[ext_resource type="LabelSettings" uid="uid://byhjcilthuooc" path="res://assets/style/label_settings/shadow_big_medium_label.tres" id="6_tufn7"]

[sub_resource type="Gradient" id="Gradient_b0ybh"]
offsets = PackedFloat32Array(0, 0.766839, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t6sdm"]
gradient = SubResource("Gradient_b0ybh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hl02j"]
lifetime_randomness = 0.28
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 70.0
direction = Vector3(0, -1, 0)
spread = 70.0
initial_velocity_min = 10.0
initial_velocity_max = 250.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
gravity = Vector3(0, 98, 0)
scale_min = 10.0
scale_max = 15.0
color_ramp = SubResource("GradientTexture1D_t6sdm")
hue_variation_min = -0.25
hue_variation_max = 0.25

[sub_resource type="Animation" id="Animation_cge3a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 50)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Title:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Title:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../VBoxContainer:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Background:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_f5hte"]
resource_name = "intro"
length = 2.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.3, 2.7),
"transitions": PackedFloat32Array(1, 1, 0.318471, 3.14),
"update": 0,
"values": [Vector2(320, 770), Vector2(320, 770), Vector2(320, 410), Vector2(320, 50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 2, 2.2, 2.7),
"transitions": PackedFloat32Array(1, 0.318471, 3.14, 1, 0.318471, 3.14),
"update": 0,
"values": [Vector2(-1280, 360), Vector2(-640, 360), Vector2(0, 360), Vector2(0, 360), Vector2(0, 180), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Title:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../VBoxContainer:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Background:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.318471, 3.14),
"update": 0,
"values": [Vector2(-1280, 0), Vector2(-320, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wth31"]
resource_name = "pop_besttime"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 0.318471, 3.14, 0.318471, 3.14),
"update": 0,
"values": [Vector2(10, 10), Vector2(5.5, 5.5), Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gnhhu"]
_data = {
"RESET": SubResource("Animation_cge3a"),
"intro": SubResource("Animation_f5hte"),
"pop_besttime": SubResource("Animation_wth31")
}

[node name="WinMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_vuus5")

[node name="Singleplayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Singleplayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Title" type="Label" parent="Singleplayer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 640.0
offset_bottom = 67.0
grow_horizontal = 2
theme = ExtResource("2_gnpol")
text = "label.level_complete"
label_settings = ExtResource("3_ugqvv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Singleplayer"]
custom_minimum_size = Vector2(640, 620)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.523
offset_left = -320.0
offset_top = -310.0
offset_right = 320.0
offset_bottom = 293.44
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="TimeLabel" parent="Singleplayer/VBoxContainer" instance=ExtResource("2_bie6w")]
layout_mode = 2
label_settings = ExtResource("5_cu4gx")

[node name="NextLevel" type="Button" parent="Singleplayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme = ExtResource("2_gnpol")
text = "button.next_level"

[node name="ReplayButton" type="Button" parent="Singleplayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 88)
layout_mode = 2
theme = ExtResource("2_gnpol")
text = "button.replay_level"

[node name="Back To Menu" type="Button" parent="Singleplayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 88)
layout_mode = 2
theme = ExtResource("2_gnpol")
text = "button.back_to_menu"

[node name="BestTimeLabel" type="Label" parent="Singleplayer"]
visible = false
layout_mode = 0
offset_left = 624.0
offset_top = 235.0
offset_right = 1344.0
offset_bottom = 286.0
rotation = 0.348019
pivot_offset = Vector2(336, 25)
mouse_filter = 1
theme = ExtResource("2_gnpol")
text = "label.best_time"
label_settings = ExtResource("6_tufn7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="Singleplayer"]
position = Vector2(961, 260)
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_hl02j")
lifetime = 5.0
speed_scale = 2.0
explosiveness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Singleplayer"]
root_node = NodePath("../BestTimeLabel")
libraries = {
"": SubResource("AnimationLibrary_gnhhu")
}

[connection signal="pressed" from="Singleplayer/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Singleplayer/VBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="Singleplayer/VBoxContainer/Back To Menu" to="." method="exit"]
